Add bolierplat HTMl and begin conten

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="/Resources/CSS/style.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Discover hidden places in the world around you</h1>
+        <p><a>Download Excursion (coming soon!)</a></p>
+    </header>
 </body>
 </html>
