Add new files and creat video section

--- a/index.html
+++ b/index.html
@@ -11,5 +11,10 @@
         <h1>Discover hidden places in the world around you</h1>
         <p><a>Download Excursion (coming soon!)</a></p>
     </header>
+    <div class="video">
+        <video autoplay loop>
+            <source src="/Resources/excursion.mp4">
+        </video>
+    </div>
 </body>
 </html>
