Added camp phot section

--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
         <p><a>Download Excursion (coming soon!)</a></p>
     </header>
     <div class="video">
-        <video autoplay loop>
+        <video autoplay loop mute>
             <source src="/Resources/excursion.mp4">
         </video>
+    </div>
+    <div class="photo">
+        <h2>Your personal travel guide</h2>
+        <p>Excursion remembers places you like, and reccomends new points of interest around you.</p>
+        <img src="/Resources/camp.webp"/>
     </div>
 </body>
 </html>
