Add Phone Section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Discover hidden places in the world around you</h1>
-        <p><a>Download Excursion (coming soon!)</a></p>
+        <p><a href="#">Download Excursion (coming soon!)</a></p>
     </header>
     <div class="video">
         <video autoplay loop mute>
@@ -20,6 +20,11 @@
         <h2>Your personal travel guide</h2>
         <p>Excursion remembers places you like, and reccomends new points of interest around you.</p>
         <img src="/Resources/camp.webp"/>
+    </div>
+    <div class="phone">
+        <img src="/Resources/phone.webp"/>
+        <h2>Coming Soon for iPhone and Android</h2>
+        <a href="#">Download Excursion (Coming soon!)</a>
     </div>
 </body>
 </html>
