--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
         <h2>Coming Soon for iPhone and Android</h2>
         <a href="#">Download Excursion (Coming soon!)</a>
     </div>
+    <footer>&copy; Excursion</footer>
 </body>
 </html>
