further css bug fixed

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
     </header>
     <div class="video">
         <video autoplay loop mute>
-            <source src="/Resources/excursion.mp4">
+            <source src="Resources/excursion.mp4">
         </video>
     </div>
     <div class="photo">
         <h2>Your personal travel guide</h2>
         <p>Excursion remembers places you like, and reccomends new points of interest around you.</p>
-        <img src="/Resources/camp.webp"/>
+        <img src="Resources/camp.webp"/>
     </div>
     <div class="phone">
-        <img src="/Resources/phone.webp"/>
+        <img src="Resources/phone.webp"/>
         <h2>Coming Soon for iPhone and Android</h2>
         <a href="#">Download Excursion (Coming soon!)</a>
     </div>
