--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <p><a href="#">Download Excursion (coming soon!)</a></p>
     </header>
     <div class="video">
-        <video autoplay loop mute>
-            <source src="Resources/excursion.mp4">
+        <video autoplay muted loop>
+            <source src="Resources/excursion.mp4" type="video/mp4">
         </video>
     </div>
     <div class="photo">
